# OmniRTOS

./: CMakeLists.txt  OmniRTOS.ioc  README.md
Core/Src/: main.c
arch/arm/cortex-m4/: os_context_gcc.S
cmake/stm32cubemx/: CMakeLists.txt
kernel/include/: os_config.h  os_list.h  os_object.h  os_task.h  os_types.h
kernel/src/: os_idle.c  os_object.c  os_sched.c  os_startup.c  os_task.c
